[gd_scene load_steps=15 format=2]

[ext_resource path="res://image_textures/arrowUpPressed.png" type="Texture" id=1]
[ext_resource path="res://image_textures/arrowUp.png" type="Texture" id=2]
[ext_resource path="res://scenes/arrow_button/arrow_button.gd" type="Script" id=3]
[ext_resource path="res://image_textures/arrowDownPressed.png" type="Texture" id=4]
[ext_resource path="res://image_textures/arrowLeft.png" type="Texture" id=5]
[ext_resource path="res://image_textures/arrowLeftPressed.png" type="Texture" id=6]
[ext_resource path="res://image_textures/arrowRightPressed.png" type="Texture" id=7]
[ext_resource path="res://image_textures/arrowDown.png" type="Texture" id=8]
[ext_resource path="res://image_textures/arrowRight.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 21.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 34 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 60 )

[node name="arrow_button" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "Right"
script = ExtResource( 3 )

[node name="perfect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="perfect"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="good" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="good"]
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[node name="ok" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ok"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="miss" type="Area2D" parent="."]
position = Vector2( 0, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="miss"]
position = Vector2( 0, -7 )
shape = SubResource( 5 )

[node name="push_timer" type="Timer" parent="."]

[connection signal="area_entered" from="perfect" to="." method="_on_perfect_area_entered"]
[connection signal="area_exited" from="perfect" to="." method="_on_perfect_area_exited"]
[connection signal="area_entered" from="good" to="." method="_on_good_area_entered"]
[connection signal="area_exited" from="good" to="." method="_on_good_area_exited"]
[connection signal="area_entered" from="ok" to="." method="_on_ok_area_entered"]
[connection signal="area_exited" from="ok" to="." method="_on_ok_area_exited"]
[connection signal="area_entered" from="miss" to="." method="_on_miss_area_entered"]
[connection signal="area_exited" from="miss" to="." method="_on_miss_area_exited"]
[connection signal="timeout" from="push_timer" to="." method="_on_push_timer_timeout"]
